--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@ethersproject/providers": "^5.7.2",
     "@heroicons/react": "^2.0.11",
+    "@next/font": "^14.0.4",
     "@rainbow-me/rainbowkit": "1.0.8",
     "@uniswap/sdk-core": "^4.0.1",
     "@uniswap/v2-sdk": "^3.0.1",
@@ -30,6 +31,7 @@
     "react-fast-marquee": "^1.3.5",
     "react-hot-toast": "^2.4.0",
     "react-json-view": "^1.21.3",
+    "swiper": "^11.0.5",
     "use-debounce": "^8.0.4",
     "usehooks-ts": "^2.7.2",
     "viem": "^1.6.7",
