--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
   },
   "resolutions": {
     "usehooks-ts@^2.7.2": "patch:usehooks-ts@npm:^2.7.2#./.yarn/patches/usehooks-ts-npm-2.7.2-fceffe0e43.patch"
+  },
+  "dependencies": {
+    "@sweetalert2/theme-dark": "^5.0.15",
+    "sweetalert2": "^11.10.1"
   }
 }
