--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -17,6 +17,7 @@
     "@heroicons/react": "^2.0.11",
     "@next/font": "^14.0.4",
     "@rainbow-me/rainbowkit": "1.0.8",
+    "@sweetalert2/theme-dark": "^5.0.15",
     "@uniswap/sdk-core": "^4.0.1",
     "@uniswap/v2-sdk": "^3.0.1",
     "blo": "^1.0.1",
@@ -32,6 +33,7 @@
     "react-fast-marquee": "^1.3.5",
     "react-hot-toast": "^2.4.0",
     "react-json-view": "^1.21.3",
+    "sweetalert2": "^11.10.1",
     "swiper": "^11.0.5",
     "use-debounce": "^8.0.4",
     "usehooks-ts": "^2.7.2",
