--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -10,7 +10,8 @@
     "lint": "next lint",
     "format": "prettier --write . '!(node_modules|.next|contracts)/**/*'",
     "check-types": "tsc --noEmit --incremental",
-    "vercel": "vercel"
+    "vercel": "vercel",
+    "export": "next export"
   },
   "dependencies": {
     "@ethersproject/providers": "^5.7.2",
