--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "next:check-types": "yarn workspace @se-2/nextjs check-types",
     "postinstall": "husky install",
     "precommit": "lint-staged",
-    "vercel": "yarn workspace @se-2/nextjs vercel"
+    "vercel": "yarn workspace @se-2/nextjs vercel",
+    "publish": "yarn workspace @se-2/nextjs export"
   },
   "packageManager": "yarn@3.2.3",
   "devDependencies": {
